--- a/src/views/Dashboard/components/bondDash.css
+++ b/src/views/Dashboard/components/bondDash.css
@@ -4,8 +4,7 @@
     margin-top: 30px;
   }
   
-  .bond-content-jt .content-it {
-  }
+ 
   
   .bond-content-jt .btn-content p {
     margin: 0;
@@ -35,4 +34,25 @@
   
   .bond-content-jt .bond-box-btn-jt .btn-container-jt{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+
+  }
+  
+  .bond-content-jt .bond-box-btn-jt .btn-container-jt button{
+    display: flex;
+    margin: 10px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    height: 30px;
+    background-color: transparent;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
   }
