--- a/src/views/Dashboard/dashboard.css
+++ b/src/views/Dashboard/dashboard.css
@@ -1,14 +1,44 @@
 .dashboard_invest {
     color: #fff;
-
-}
-
-.dashboard_invest .bomb-summary .summary {
+  }
+  
+  .dashboard_invest h2 {
+    /* font-family: Nunito; */
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 30px;
+    color: #fff !important;
+  }
+  
+  .dashboard_invest .bomb-summary {
+    box-sizing: border-box;
+    width: 80%;
+    padding: 10px 3%;
+    margin: 30px auto;
+    background: rgba(35, 40, 75, 0.75);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
+  }
+  .dashboard_invest .bomb-summary .summary {
     display: flex;
     justify-content: space-between;
   }
-
-  dashboard_invest .bomb-summary .left-summary {
+  
+  .dashboard_invest .bomb-summary .header-dev {
+    height: 0px;
+  }
+  
+  .dashboard_invest .bomb-summary .head-top {
+    width: 100%;
+    padding-bottom: 5px;
+    border-bottom: 0.5px solid rgba(195, 197, 203, 0.75);
+  }
+  
+  .dashboard_invest .bomb-summary .head-top h2 {
+    text-align: center;
+  }
+  
+  .dashboard_invest .bomb-summary .left-summary {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,14 +69,27 @@
     height: 30px;
   }
   
-  .dashboard_invest .summary-clock p {
+  .dashboard_invest .summary-table .dashboard_invest .summary-clock p {
     font-size: 25px;
     font-weight: 600;
     line-height: 25px;
     text-align: center;
     color: #ffffff;
   }
-
+  .dashboard_invest .invest-strategy {
+    display: flex;
+    width: 80%;
+    margin: 30px auto;
+  }
+  
+  .dashboard_invest .invest-strategy .table table th {
+    padding: 15px;
+  }
+  
+  .dashboard_invest .invest-strategy .table table th {
+    padding: 15px;
+  }
+  
   .dashboard_invest .left-head-next {
     border-bottom: 1x solid #fff !important;
     font-weight: 400;
@@ -57,82 +100,36 @@
     margin: 5px 0;
   }
   
-  .dashboard_invest .bomb-summary .left-status span{
-      color:#00E8A2;
-  }
-
-.dashboard_invest .bomb-summary {
-  box-sizing: border-box;
-  width: 90%;
-  padding: 12px 3%;
-  margin: 22px auto;
-  height: 377.25px;
-  background: rgba(57, 64, 109, 0.75);
-  backdrop-filter: blur(5px);
-  border-radius: 15px;
-}
-.dashboard_invest .bomb-summary .header-dev {
-  height: 0px;
-}
-
-.dashboard_invest .bomb-summary .head-top {
-  width: 100%;
-  padding-bottom: 10px;
-  border-bottom: 0.5px solid rgba(40, 82, 209, 0.75);
-}
-
-.dashboard_invest .bomb-summary .head-top h2 {
-  /* font-family: Nunito; */
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff !important;
-  text-align: center;
-}
-
-.dashboard_invest .bomb-summary .left-status span {
+  .dashboard_invest .bomb-summary .left-status span {
     color: #00e8a2;
   }
   
-  
+  .dashboard_invest .bold-summary .summary-table table th {
+  }
   
   .dashboard_invest .bomb-summary .summary-table table th {
+    border-bottom: 1px solid #fff !important;
     padding: 15px;
   }
-  .dashboard_invest .bomb-summary .summary-table table  td{
-      text-align: center;
-  
+  .dashboard_invest .bomb-summary .summary-table table td {
+    text-align: center;
+    padding: 10px;
   }
   
-  .dashboard_invest .bomb-summary .summary-table table  .td1{
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-  
+  .dashboard_invest .bomb-summary .summary-table table .td1 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
   
   .dashboard_invest .bomb-summary .summary-table table tr img {
     width: 30px;
     margin: 4px;
   }
-
-  .dashboard_invest h2 {
-    /* font-family: Nunito; */
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 30px;
-    color: #fff !important;
-  }
-
-  .dashboard_invest .invest-strategy {
-    display: flex;
-    width: 80%;
-    margin: 20px auto;
-  }
   
   .dashboard_invest .invest-strategy .strategy-col {
     width: 70%;
-    padding: 10px;
+    padding-right: 10px;
   }
   
   .dashboard_invest .invest-strategy .strategy-col .read_link {
@@ -141,14 +138,30 @@
     flex-direction: column-reverse;
   }
   
+  .dashboard_invest .invest-strategy .strategy-col .read_link {
+    display: flex;
+    flex-direction: row-reverse;
+    margin-bottom: 10px;
+  }
+  
+  
+  
   .dashboard_invest .invest-strategy .strategy-col .read_link a {
     text-align: right;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 22px;
+    /* identical to box height */
+  
+    display: flex;
+    text-decoration-line: underline;
+    font-feature-settings: 'liga' off;
+  
+    color: #9ee6ff;
   }
   
   .btn-invest {
     box-sizing: border-box;
-  
-    width: 646px;
     height: 40px;
   
     background: radial-gradient(
@@ -163,6 +176,7 @@
     /* identical to box height */
   
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
     color: #ffffff;
@@ -180,12 +194,13 @@
     border: 1px solid #728cdf;
     backdrop-filter: blur(12.5px);
     margin: 10px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   
   .dashboard_invest .invest-strategy .board-room {
     box-sizing: border-box;
-    width: 646px;
-    height: 202px;
   
     background: rgba(35, 40, 75, 0.75);
     border: 1px solid #728cdf;
@@ -203,18 +218,60 @@
     width: 10%;
   }
   
+  .dashboard_invest .invest-strategy .board-room .head .head-img img {
+    width: 48px;
+  }
+  
   .dashboard_invest .invest-strategy .board-room .info {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: .5px solid #fff;
     width: 90%;
   }
+  
+  .dashboard_invest .invest-strategy .board-room .tot-stack{
+      width: 100%;
+      display: flex;
+      flex-direction:  row-reverse;
+      margin: 10px 0;
+  }
+  
+  .dashboard_invest .invest-strategy .board-room .info-content .tags{ 
+      display: grid;
+      width: 40%;
+      flex-direction: column;
+  }
+  
+  .dashboard_invest .invest-strategy .board-room .info-content .tags .tag-top{ 
+      width: 100%;
+  }
+  
+  .dashboard_invest .invest-strategy .board-room .info-content .tags .tag-top button{ 
+      width: 45%;
+  }
+  
+  .dashboard_invest .invest-strategy .board-room .info-content .tags button{ 
+      
+      background-color: transparent;
+      border-radius: 10px;
+      border: 1px solid #fff;
+      padding: 5px;
+      margin: 0 5px;
+      color: #fff;
+      height: 30px;
+  }
+  
+  
+  
   .dashboard_invest .invest-strategy .board-room .info .content {
     /* display: flex; */
-
   }
   
   .dashboard_invest .invest-strategy .board-room .info .content .head_content {
     /* display: flex; */
     display: flex;
+    align-items: center   ;
   }
   
   .dashboard_invest .invest-strategy .board-room .info-content {
@@ -223,8 +280,32 @@
     width: 100%;
   }
   
+  .dashboard_invest .invest-strategy .board-room .info .para {
+    margin-top: 5px;
+  }
+  
+  .dashboard_invest .invest-strategy .board-room .info .recommend {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    gap: 10px;
+    width: 101px;
+    height: 16px;
+    background: rgba(0, 232, 162, 0.5);
+    border-radius: 3px;
+    font-size: 12px;
+  }
+  
   .table {
     width: 60%;
+  }
+  
+  .table .head {
+    display: flex;
+    justify-content: space-evenly;
   }
   
   .table .head {
@@ -237,33 +318,25 @@
     justify-content: space-evenly;
   }
   
-  
-    .dashboard_invest .invest-strategy .board-room .info-content .table .info {
-      display: flex;
-      justify-content: space-evenly;
-    }
-  
   .dashboard_invest .invest-strategy .board-room .info-content table {
-
   }
   
   .dashboard_invest .invest-strategy .news {
     box-sizing: border-box;
     width: 40%;
-    height: 336px;
     padding: 10px;
     background: rgba(35, 40, 75, 0.75);
     border: 1px solid #728cdf;
     backdrop-filter: blur(5px);
     border-radius: 10px;
   }
-
- 
-
-.dashboard_invest .bomb-farm {
+  
+  /* bomb farm */
+  
+  .dashboard_invest .bomb-farm {
     box-sizing: border-box;
-  margin: 20px auto;
-  padding: 10px 2%;
+    margin: 20px auto;
+    padding: 10px 2%;
     width: 80%;
     height: 377.25px;
     background: rgba(35, 40, 75, 0.75);
@@ -278,9 +351,9 @@
     justify-content: space-between;
   }
   
-  .dashboard_invest .bonds-container {
+  .dashboard_invest .bonds-container-jt {
     box-sizing: border-box;
-    margin: 20px auto;
+    margin: 30px auto;
     padding: 10px 2%;
     width: 80%;
     height: 200px;
@@ -292,27 +365,25 @@
     border-radius: 10px;
   }
   
-  .dashboard_invest .bonds-container-invest {
+  .dashboard_invest .bonds-container-jt {
     display: flex;
     flex-direction: column;
   }
   
-  .dashboard_invest .bonds-container-invest .head-show .head-img-show img {
+  .dashboard_invest .bonds-container-jt .head-show {
+    display: flex;
+  }
+  
+  .dashboard_invest .bonds-container-jt .head-show .head-img-show img {
     width: 33px;
     margin-right: 10px;
   }
   
-  .dashboard_invest .bonds-container-invest .head-show {
-    display: flex;
-  }
-  .dashboard_invest .bonds-container p {
+  .dashboard_invest .bonds-container-jt p {
     margin: 0;
-    width: 638px;
-    height: 18px;
     font-weight: 400;
     font-size: 14px;
     line-height: 19px;
   
     color: #ffffff;
   }
-
