--- a/src/views/Dashboard/dashboard.css
+++ b/src/views/Dashboard/dashboard.css
@@ -3,7 +3,7 @@
   }
   
   .dashboard_invest h2 {
-    /* font-family: Nunito; */
+
     font-weight: 400;
     font-size: 22px;
     line-height: 30px;
@@ -386,4 +386,22 @@
     line-height: 19px;
   
     color: #ffffff;
+  }
+
+.dashboard_invest .content-contaienr .buttons-container button {
+    /* padding: 5px; */
+    margin: 10px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+    height: 30px;
+    background-color: transparent;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
   }
